<resources>
    <string name="app_name">My Application1</string>
    <string name="customer_name">Customer Name: <font color='#FF0000'>*</font></string>
    <string name="date_of_birth">Date of Birth<font color='#FF0000'>*</font></string>
    <string name="mobile_no">Mobile No:<font color='#FF0000'>*</font></string>
    <string name="e_mail">E-Mail:<font color='#FF0000'>*</font></string>
    <string name="address">Address: <font color='#FF0000'>*</font></string>
    <string name="loan_amount">Loan Amount:<font color='#FF0000'>*</font></string>
    <string name="loan_Tenure">Loan Tenure (Months):<font color='#FF0000'>*</font></string>
    <string name="rate_of_interest">Rate of Interest:<font color='#FF0000'>*</font></string>
    <string name="married">Married</string>
    <string name="single">Single</string>
    <string name="submit">SUBMIT</string>
    <string name="neft_facility">NEFT Facility Available </string>
    <string name="list_names">Name</string>
    <string name="list_codes">Code</string>
    <string name="user_Name">User Name</string>
    <string name="Suite">Suite </string>
    <string name="city">city </string>
    <string name="Zip_Code">Zip Code </string>
    <string name="geo">Geo: </string>

    //custom dialog

    <string name="show_dialog">Show dialog</string>
    <string name="show_custom_dialog">Show custom dialog</string>
    <string name="ok">OK</string>
    <string name="greetings_sent_successfully">Greetings sent successfully</string>
    <string name="street">Street</string>
    <string name="lat">Lat</string>
    <string name="lng">lng</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="company_name">Company Name</string>
    <string name="catch_phrase">Catch Phrase</string>
    <string name="bs">bs</string>
    <string name="submit_info">Submit Info</string>
    <string name="loan_list_data">Loan List Data</string>
    <string name="personal_info">Personal Info</string>
    <string name="get_retrofit">Get Retrofit</string>
    <string name="button">Button</string>
    <string name="post_retrofit">Post Retrofit</string>
    <string name="get_retrofit_image">Get Retrofit Image</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="this_is_a_custom_dialog_message">This is a custom dialog message</string>
    <string name="dismiss">Dismiss</string>
    <string name="id">Id</string>
    <string name="title">Title</string>
    <string name="show">Show</string>
    <string name="post_data">Post Data</string>
    <string name="user_id">User Id</string>
    <string name="body">Body</string>
    <string name="post">Post</string>
    <string name="tods_data">Tods Data</string>
    <string name="personal_loan">Personal Loan</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="upload_image">upload Image</string>
    <string name="download_image">Download Image</string>
    <string name="login">LogIn</string>
    <string name="button1">Button</string>
    <string name="user_id_getData">User ID</string>
    <string name="title1">Title</string>
    <string name="complete">Complete</string>
    <string name="personal_loan1">Personal Loan</string>
    <string name="dd_mm_yyyy1">DD/MM/YYYY</string>
    <string name="tap_to_select_image">Tap to select image</string>
    <string name="upload">Upload</string>


</resources>
