<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Button
        android:id="@+id/loanBridgeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_list_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/get_personal_Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        app:layout_constraintBottom_toTopOf="@+id/tods_Data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getImage" />

    <Button
        android:id="@+id/retrofitGetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_retrofit"
        app:layout_constraintBottom_toTopOf="@+id/postRetrofitBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanBridgeBtn" />

    <Button
        android:id="@+id/tods_Data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tods_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/postRetrofitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_retrofit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/getImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_retrofit_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/uploadImageBridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="upload Image"
        app:layout_constraintBottom_toTopOf="@+id/get_personal_Info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getImage" />
</androidx.constraintlayout.widget.ConstraintLayout>