<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="loanData"
            type="com.example.myapplication1.dataclass.LoginValidationData" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ExtraText">


                <TextView
                    android:id="@+id/personalLoanText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/personal_loan"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <TextView
                    android:id="@+id/customerNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/customer_name"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personalLoanText"

                    />

                <EditText
                    android:id="@+id/editTextCustomerName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:text="@={loanData.customerName}"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customerNameText"

                    />

                <TextView
                    android:id="@+id/DateofBirthTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/date_of_birth"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextCustomerName1"

                    />


                <TextView
                    android:id="@+id/editTextDateofBirth1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:hint="@string/dd_mm_yyyy"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/DateofBirthTextview"

                    />

                <RadioGroup
                    android:id="@+id/radioGroupMarried_Single1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/editTextDateofBirth1">

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/married"
                        android:textColor="@android:color/black"

                        />

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/single"
                        android:textColor="@android:color/black"
                        android:layout_marginLeft="50dp"
                        android:layout_marginStart="50dp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/mobileNoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mobile_no"
                    android:textColor="@android:color/black"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroupMarried_Single1"

                    />


                <EditText
                    android:id="@+id/editTextMobileNumber1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:text="@={loanData.mobileNumber}"
                    android:inputType="phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mobileNoTextView"

                    />

                <TextView
                    android:id="@+id/EmailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/e_mail"
                    android:textColor="@android:color/black"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextMobileNumber1"

                    />


                <EditText
                    android:id="@+id/editTextEmailId1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@={loanData.email}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/EmailTextView"

                    />

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textColor="@android:color/black"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmailId1"

                    />


                <EditText
                    android:id="@+id/editTextAddress1"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:gravity="start"
                    android:text="@={loanData.address}"
                    android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressTextView" />

                <TextView
                    android:id="@+id/loanAmountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/loan_amount"
                    android:textColor="@android:color/black"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextAddress1"

                    />


                <EditText
                    android:id="@+id/editTextLoanAmount1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:text="@={loanData.loanAmount}"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loanAmountTextView"

                    />

                <TextView
                    android:id="@+id/loanTenureAmountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/loan_Tenure"
                    android:textColor="@android:color/black"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextLoanAmount1"

                    />


                <EditText
                    android:id="@+id/editTextLoanTenureAmount1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:text="@={loanData.loantenure}"

                    android:inputType="number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loanTenureAmountTextView"

                    />

                <TextView
                    android:id="@+id/rateOfInterestTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/rate_of_interest"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextLoanTenureAmount1"

                    />


                <EditText
                    android:id="@+id/editTextRateOfInterest1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@={loanData.rateOfInterest}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rateOfInterestTextView"

                    />

                <CheckBox
                    android:id="@+id/checkBoxNEFTFacility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/neft_facility"

                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextRateOfInterest1" />

                <Button
                    android:id="@+id/submit_Btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxNEFTFacility" />

                <ImageButton
                    android:id="@+id/calender_btn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextDateofBirth1"
                    app:layout_constraintStart_toEndOf="@+id/DateofBirthTextview"
                    app:srcCompat="@drawable/ic_baseline_calendar_today_24"
                    tools:ignore="VectorDrawableCompat" />



            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>